--- a/index.html
+++ b/index.html
@@ -1,71 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta title="Brian Medrano Herrera">
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta title="Brian Medrano Herrera" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Inicio</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+  </head>
 
-</head>
-
-<body>
-    <div class="container" style="margin-top: 100px;">
-        <div class="row justify-content-center">
-            <div class="col-md-6 text-center mb-5">
-                <h2>Tabla de Pokémons</h2>
-            </div>
+  <body>
+    <div class="container" style="margin-top: 100px">
+      <div class="row justify-content-center">
+        <div class="col-md-6 text-center mb-5">
+          <h2>Tabla de Pokémons</h2>
         </div>
-        <div class="table-responsive">
-            <table class="table table-hover table-dark">
-                <thead class="thead-primary">
-                    <tr>
-                        <th scope="col">Poké ID</th>
-                        <th scope="col">Arte oficial</th>
-                        <th scope="col">Nombre</th>
-                        <th scope="col">Habilidades</th>
-                    </tr>
-                </thead>
-                <tbody id="data">
-                </tbody>
-            </table>
-        </div>
+      </div>
+      <div class="table-responsive">
+        <table class="table table-hover table-dark">
+          <thead class="thead-primary">
+            <tr>
+              <th scope="col">Poké ID</th>
+              <th scope="col">Arte oficial</th>
+              <th scope="col">Nombre</th>
+              <th scope="col">Habilidades</th>
+            </tr>
+          </thead>
+          <tbody id="data"></tbody>
+        </table>
+      </div>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
 
     <script>
+      getData();
 
-        getData();
-
-        async function getData() {
-            const response = await fetch('https://pokeapi.co/api/v2/pokemon/11')
-            console.log(response);
-            const data = await response.json();
-            console.log(data);
-            //length = data.data.length;
-            console.log(data);
-            var temp = "";
-            temp += "<tr>";
-            temp += "<td>" + data.id;
-            temp += "<td>" + "<img src='" + data.sprites.other['official-artwork'].front_default + "' width=50 height=50>" + "</td>";
-            temp += "<td>" + data.name + "</td>";
-            temp += "<td>" + data.abilities[0].ability.name + "</td>";
-
-            document.getElementById("data").innerHTML = temp;
+      async function getData() {
+        const response = await fetch("https://pokeapi.co/api/v2/pokemon");
+        console.log(response);
+        const data = await response.json();
+        var temp = "";
+        for (i = 1; i < 100; i++) {
+          const pokemon = await fetch("https://pokeapi.co/api/v2/pokemon/" + i);
+          const dataPoke = await pokemon.json();
+          console.log(dataPoke);
+          temp += "<tr>";
+          temp += "<td>" + dataPoke.id;
+          temp +=
+            "<td>" +
+            "<img src='" +
+            dataPoke.sprites.other["official-artwork"].front_default +
+            "' width=50 height=50>" +
+            "</td>";
+          temp += "<td>" + dataPoke.name + "</td>";
+          temp += "<td>" + dataPoke.abilities[0].ability.name + "</td>";
         }
-    </script>
-</body>
 
+        document.getElementById("data").innerHTML = temp;
+      }
+    </script>
+  </body>
 </html>
